--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'lucida calligraphy','poppins' ;
 }
 body{
   display: flex;
@@ -12,7 +12,9 @@ body{
   min-height: 100vh;
   align-items: center;
   justify-content: center;
-  background: #894d44;
+  background-image:url("image.png");
+  background-repeat:no-repeat;
+  background-size:cover;
 }
 .wrapper{
   width: 430px;
